# Composite3D

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: copyifmissing.cmake
docs/: cm3w.draft.txt  cm3w.txt  cm3wload.txt  fiercewild.txt
examples/: module.mk
examples/Render/: CMakeLists.txt  module.mk
examples/Render/Fiercewild/: CMakeLists.txt  module.mk
examples/Render/Fiercewild/models/bflyscrew/: bflyscrew.mtl
examples/Render/Fiercewild/src/: main.cpp
gmake/: assimp.lua  assimp.mk  glfw.lua  glfw.mk  luarjit.lua  luarjit.mk  util.lua
include/Core/: FPCamera.hpp  FileSystem.hpp  GLSLPreprocessor.hpp  GLShaderProgram.hpp  Graphics.hpp  HardInfo.hpp  LogManager.hpp  Malloc.hpp  Math.hpp  Object.hpp  World.hpp
include/Core/OSSpecific/: FileSystem.hpp
include/Modules/: NRPhysics.hpp  RenderSurface.hpp
include/Render/: Base.hpp  WinConfig.hpp
include/Render/Fiercewild/: Fiercewild.hpp
include/Render/Fiercewild/Modules/: RenderSurface.hpp
include/Types/: DLList.hpp  DynArray.hpp  DynArrayIterators.hpp  Linear.hpp  LinearAliases.hpp  Queue.hpp  SLList.hpp  SLNode.hpp  SLNodeIterators.hpp  Scalar.hpp  Stack.hpp  String.hpp  UniqueStorage.hpp  Vector3.hpp
include/Types/Inline/: Scalar.inl
include/Utility/: Hash.hpp  IOBasic.hpp  MtBasic.hpp  SCstring.hpp  Scene.hpp  Std.hpp  SysBasic.hpp
include/cm3d/AppLayer/: Common.hpp  GUI.hpp  Global.hpp  Window.hpp  cm3d.txt  windowBase.hpp
include/cm3d/AppLayer/Platform/GLFW/: Events.hpp  Global.inl  Window.hpp
include/cm3d/Core/: FPCamera.hpp  FileSystem.hpp  GLSLPreprocessor.hpp  GLShaderProgram.hpp  GlobalState.hpp  Graphics.hpp  HardInfo.hpp  LogManager.hpp  Malloc.hpp  Math.hpp  Object.hpp  Runtime.hpp  World.hpp
include/cm3d/Core/Inline/: Math.inl
include/cm3d/IO/: FileStream.hpp  MemStream.hpp  binStream.hpp  binStreamR.hpp  binStreamW.hpp  common.hpp
include/cm3d/Modules/: Base.hpp  NRPhysics.hpp  Position.hpp  RenderSurface.hpp
include/cm3d/Render/: Base.hpp  WinConfig.hpp
include/cm3d/Render/Fiercewild/: Fiercewild.hpp
include/cm3d/Render/Fiercewild/Modules/: RenderSurface.hpp
include/cm3d/Serialization/: Alias.hpp
include/cm3d/Serialization/Core/: Object.hpp
include/cm3d/Serialization/Modules/: RenderSurface.hpp
include/cm3d/Serialization/Types/: DynArray.hpp  SmartPtr.hpp
include/cm3d/Tl/: Aliases.hpp  DLNode.hpp  DynArray.hpp  DynArrayIterators.hpp  LinearAliases.hpp  Queue.hpp  SLList.hpp  SLNode.hpp  SLNodeIterators.hpp  Scalar.hpp  Stack.hpp  String.hpp  UniqueStorage.hpp  Vector3.hpp
include/cm3d/Tl/Inline/: Scalar.inl  Vector3.inl
include/cm3d/Types/: DynArray.hpp  LinearAliases.hpp  Queue.hpp  SLList.hpp  SLNode.hpp  SLNodeIterators.hpp  Scalar.hpp  String.hpp  UniqueStorage.hpp  Vector3.hpp
include/cm3d/Utility/: Debug.hpp  Hash.hpp  Scene.hpp  Std.hpp  SysBasic.hpp
include/cm3d/Utility/GL/: Preprocessor.hpp  ShaderProgram.hpp
source/: CMakeLists.txt  module.mk
source/AppLayer/: CMakeLists.txt  Global.cpp  module.mk
source/AppLayer/Platform/GLFW/: GUI_gl3.cpp  Window.cpp
source/Core/: CMakeLists.txt  FPCamera.cpp  FileSystem.cpp  GLSLPreprocessor.cpp  GLShaderProgram.cpp  GlobalState.cpp  Graphics.cpp  HardInfo.cpp  LogManager.cpp  Malloc.cpp  Vector3.cpp  World.bak.cpp  World.cpp  module.mk
source/Core/OSSpecific/: FileSystem.cpp
source/Render/: module.mk
source/Render/Fiercewild/: CMakeLists.txt  Fiercewild.cpp  module.mk
source/Render/Fiercewild/Modules/: RenderSurface.cpp
source/Utility/: CMakeLists.txt  module.mk
source/Utility/GL/: CMakeLists.txt  Preprocessor.cpp  ShaderProgram.cpp  module.mk
tests/: CMakeLists.txt
tests/Core/: CMakeLists.txt
tests/Core/FileSystem/: CMakeLists.txt  debug.bat  release.bat
tests/Core/FileSystem/src/: main.cpp
tests/Core/GLSLPreprocessor/: CMakeLists.txt  compile.sh  release.bat
tests/Core/GLSLPreprocessor/res/: inc.glsl
tests/Core/GLSLPreprocessor/src/: main.cpp
tests/Core/LogManager/: CMakeLists.txt  compile.bat
tests/Core/LogManager/src/: main.cpp
tests/Core/Math/: CMakeLists.txt  compile  compile.bat  main.cpp
tests/Core/Math/src/: main.cpp
tests/Modules/: CMakeLists.txt
tests/Modules/RenderSurface/: CMakeLists.txt
tests/Modules/RenderSurface/src/: main.cpp
tests/Render/Fiercewild/: CMakeLists.txt  objects.lua
tests/Render/Fiercewild/models/planet/: planet.mtl  untitled.mtl
tests/Render/Fiercewild/models/spike/: spike.gltf
tests/Render/Fiercewild/resources/shaders/fiercewild/: Metal_fs.glsl  Metal_vs.glsl  default_fs.glsl  default_vs.glsl
tests/Render/Fiercewild/src/: main.cpp
tests/Serialization/: CMakeLists.txt
tests/Serialization/src/: main.cpp
tests/Types/: CMakeLists.txt
tests/Types/BasicQueue/: compile  compile.bat
tests/Types/BasicQueue/src/: main.cpp
tests/Types/DynArray/: CMakeLists.txt  compile  compile.bat  compile.sh
tests/Types/DynArray/perf/: dynarr.cpp  stdvec.cpp
tests/Types/Queue/: CMakeLists.txt
tests/Types/Queue/src/: main.cpp
tests/Types/SLList/: CMakeLists.txt  compile  compile.bat
tests/Types/SLList/src/: main.cpp
tests/Types/UniqueStorage/: CMakeLists.txt
tests/Types/UniqueStorage/src/: main.cpp
tests/Utility/: CMakeLists.txt
tests/Utility/GL/: CMakeLists.txt
tests/Utility/GL/Preprocessor/: CMakeLists.txt
tests/Utility/GL/Preprocessor/src/: main.cpp
tests/Utility/Scene/: CMakeLists.txt  future.lua  reality.lua
tests/Utility/Scene/src/: main.cpp
